<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AMobiSense</string>
    <string name="running_on_startup">AMobiSense will now run after your phone starts up.</string>
    <string name="not_running_on_startup">AMobiSense will no longer run on when your phone starts up.</string>
    <string name="stop_sending_text">This application sends data on power utilization, running applications and context to the our team. We gather nothing allowing us to associate the data with you or your phone; a cryptographically secure hash function is used to protect your identity.  Pressing \'Stop\' will prevent these data from being sent.</string>
    <string name="start_sending_text">This application sends data on power utilization, running applications and context to the our team. We gather nothing allowing us to associate the data with you or your phone; a cryptographically secure hash function is used to protect your identity.  Pressing \'Start\' will start sending the data from now on.</string>
    <string name="unknown_phone">Your phone type is not recognized by AMobiSense :-(, but don\'t worry, you may continue to use it, but some power calculations may be inaccurate.</string>
    <string name="term">
    <p><b>Welcome to AMobiSense</b>, context sensing platform based on <a href="http://powertutor.org">PowerTutor</a> 
       It can be used by context sensitive applications or by self-trackers to inspect and/or record device power use and context. 
    </p>
    <p>
    AMobiSense gathers various data and (ONLY IF YOU ALLOW THIS) send this data back to us. 
    We hope, that this data will help us answer questions important for mobile software optimizations, e.g.\n
    - Is it possible to predict loss of network connection?\n
    - Can remote execution help to increase battery life?\n
    Pleas,consider to allow sending this data to our team.
    </p> 
    <p>We gather\n
	- CPU use\n
	- Amount of WiFi/3G traffic (not its content)\n
	- Screen brightness\n
	- GPS activity (but not location)\n
    - Audio use (on/off, volume)\n
	- Total power consumption\n
	- Application resource utilization\n
	- Phone mode, e.g., airplane mode or call status\n
	- WiFis around you\n
	- Accelerometer data\n
	- CID, LAC and info about surrounding cells\n
</p>
<p>\nWe do <b>NOT</b> gather your personal data used in applications
or phone call logs. None of these data will be associate with you or your phone.
We use a cryptographically secure hash function to protect your identity.\n
</p>\n

<p>AMobiSense will send back traces only if you allow this and only if WiFi connection is available. More over,
 it prefers situations, when phone will be plugged to power supply. \n </p> \n
      
<p>By default, trace upload is enabled. If you would like to disable it (or to change upload destination server) you could do this in the menu of the main screen. 
Pleas, consider to help us by by allowing trace uploads. </p>

</string>
    <string name ="help_head"> <big><b>AMobiSense</b></big> - A real-time system resource, application and device context monitor and more.</string>
    
    <string name ="help_text">\n
<p>     
You see a version of AMobiSense, context sensing platform based on
PowerTutor power monitor. It can be used by context sensing
applications, self-trackers or other interested people. The main parts are:
</p>
\n \n
<ul>
	<li><b>Main control panel</b>\n
	    - Start/stop profiling services. \n 
		- Menu features:\n 
			\t* Start/stop uploading traces to us.\n 
			\t* Enable the data gathering to run on startup.\n 
			\t* Save the current power trace to the sdcard.\n 
			\t* Save the context log to the sdcard.\n
	</li> \n
	<li><b>Context Views</b>\n 
	    - Shows various device context information, such as \n
	    	\t* Wifi\'s around \n 
	    	\t* Values on accelerometer \n 
	    	\t* CPU use \n 
	    	\t* Cell Towers around you \n 
	</li> \n
	
	<li><b>Power View</b> \n
	<ol>
		<li><b>App View</b>\n - Displays power usage information for all
		of the apps running on the phone.\n - Press an app row to go to the <i>Graph
		View</i> for that app\'s power usage.\n - Press a hardware component name
		in the top tabs to include/exclude it from power calculations.\n -
		Data interpretation:\n \t* Percentage value: The percentage of
		energy/average power consumed by the app in system.\n \t* Time value:
		Time that the app has been actively monitored by this platform.\n -
		Menu features:\n \t* Change the sort key to one of current power,
		average power, or total energy usage.\n \t* Change the time span to
		include the last minute, hour, day, or all time.\n</li>
		
		<li><b>Graph View</b>\n - Displays app/system power consumption
		decomposed by hardware component.\n - Use the tabs at the top to move
		between <i>Chart View</i> and <i>Pie View</i>.\n</li>
		
		<li><b>Chart View</b>\n - Displays the power usage of different
		components on the phone in recent history.\n - Scroll to view
		different component power graphs.\n - Menu features:\n \t* Select \"<i>Set
		History Size</i>\" to adjust the number of data points displayed.\n \t*
		Select \"<i>Magnify Recent Data</i>\" to show more recent data points
		more spread out.\n \t* Select \"<i>Pause</i>\" to freeze the display
		as is, select resume to continue.\n</li>
		
		<li><b>Pie View</b>\n - Displays the power usage percentages of
		the different components.\n - Menu features:\n \t* Change the time
		span to include the last minute, hour, day, or all time.\n</li>
	</ol>
	</li>
</ul>
    
    </string>


<string name="url_1">For detailed information, please go to: </string>
<string name="url_2"> <a href="https://github.com/tpcz/amobisense/wiki">https://github.com/tpcz/amobisense/wiki</a> and <a href="http://powertutor.org">http://powertutor.org</a> .\n</string>

<string name="prefs_run_on_startup">Run on startup</string>
<string name="prefs_run_on_startup_summary">Have the profiling service start when your phone starts</string>


<string name="prefs_anonymize_gsm">Anonymize GSM </string>
<string name="prefs_anonymize_gsm_summary">Shows real values of CID and LAC in app, but to logs write only cryto </string>

<string name="prefs_anonymize_wifi">Anonymize WiFi</string>
<string name="prefs_anonymize_wifi_summary">Shows real values of  SSID and BSSID in app, but to logs write only cryto hashes.</string>

<string name="prefs_send_logs">Send logs</string>
<string name="prefs_send_logs_summary">Send back power traces to the our team</string>

<string name="personalinfo_age">Your Age</string>
<string name="personalinfo_age_summary">Your age will help us better understand data..</string>
<string name="errmsg_not_valid_age">This is not a valid value for age</string>

<string name="personalinfo_gender">Your Gender</string>
<string name="personalinfo_gender_summary">Your gender will help us better understand data..</string>

<string name="personalinfo_job">Your Position</string>
<string name="personalinfo_job_summary">You current occupation (e.g. student, IT specialist, teacher..)</string>

<string name="personalinfo_note">Note</string>
<string name="personalinfo_note_summary">Do you have any note to us?</string>


<string name="personalinfo_education">Your Education</string>
<string name="personalinfo_education_summary">You current education (E.g. High School or University degree)</string>

<string name="preferences_upload_url">URL to upload data</string>
<string name="preferences_upload_url_summary">Your can change server, where to upload data</string>

<string name="preferences_allow_orientation_sensor">Allow scanning orientation sensor?</string>
<string name="preferences_allow_orientation_sensor_summary">This will significantly increase power consumtion!</string>


<string name="application_name">AMobiSense</string>
</resources>
