<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
	  <CheckBoxPreference android:key="runOnStartup"
				    android:title="@string/prefs_run_on_startup"
				    android:summary="string/prefs_run_on_startup_summary" />
	  
	  <CheckBoxPreference android:key="sendPermission"
				    android:title="@string/prefs_send_logs"
				    android:summary="@string/prefs_send_logs_summary" />
	  
	  <CheckBoxPreference android:key="anonymizeGSM"
				    android:title="@string/prefs_anonymize_gsm"
				    android:summary="@string/prefs_anonymize_gsm_summary" />
	  
	  <CheckBoxPreference android:key="anonymizeWIFI"
				    android:title="@string/prefs_anonymize_wifi"
				    android:summary="@string/prefs_anonymize_wifi_summary" />
				    
	  <EditTextPreference android:key="upload_url" 
	                android:title="@string/preferences_upload_url"
	                android:summary="@string/preferences_upload_url_summary"
	                android:dialogTitle="Enter server to upload data" />
	  
	 <CheckBoxPreference android:key="allow_orientation_sensor" 
	                android:title="@string/preferences_allow_orientation_sensor"
	                android:summary="@string/preferences_allow_orientation_sensor_summary"
	                android:dialogTitle="Allow orientation sensor?" />
</PreferenceScreen>
